src/test/deca/codegen/valid/minimal_codegen_stress.deca
{
    int a = 1;
    int b = 2;
    int c = 3;
    boolean r;

    r = (a + b > c) && (c - b == a);
    println(r);
}
