src/test/deca/codegen/invalid/test_operateur_nonboolean.deca
// Resultats :
// Erreur attendue : type booléen attendu
{
    int a = 1;
    int b = 0;
    boolean c = a && b;
}